--- a/style.css
+++ b/style.css
@@ -228,7 +228,7 @@ div.card {
     height: 335px;
     background-color: #383838;
     border-radius: 20px;
-    margin: 0 0 40px 0;
+    margin: 0 auto 40px auto;
 }
 
 img.img-port {
